# typeless-lite

./: .gitignore  README.md
.github/workflows/: release-windows.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/scripts/: windows-build.ps1
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/scripts/: windows-sign.ps1
app/src-tauri/src/: commands.rs  coordinator.rs  credentials.rs  hotkey.rs  insertion.rs  lib.rs  main.rs  openai_compat.rs  persistence.rs  polish.rs  recorder.rs  types.rs
app/src-tauri/src/asr/: mod.rs  sherpa.rs
app/src/components/: Capsule.tsx  IconButton.tsx  SettingsModal.tsx  ShortcutRecorder.tsx
app/src/lib/: format.ts  ipc.ts  types.ts
app/src/pages/: Dictionary.tsx  History.tsx  Home.tsx  Styles.tsx
app/src/styles/: global.css
docs/: release-windows.md  test-flow.md  typeless-rebuild-plan.md
